--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ src/img/contact.mp4
 src/img/medusa.avif
 src/img/Colleen_Hoover_-_November_9.epub
 src/img/Better_Than_the_Movies_by_Lynn_Painter_z-lib_org.epub
+package.json
