--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ src/estrellas.css
 src/components/product/Product.jsx
 src/components/product/Product.jsx
 src/components/product/Product.jsx
+src/components/contact/contact.css
