--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ src/components/product/Product.jsx
 src/components/product/Product.jsx
 src/components/product/Product.jsx
 src/components/contact/contact.css
+src/App.jsx
