--- a/.gitignore
+++ b/.gitignore
@@ -21,17 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-src/components/intro/intro.css
-src/components/intro/Intro.jsx
-src/img/contact.jpg
-src/img/contact.mp4
-src/img/medusa.avif
-src/img/Colleen_Hoover_-_November_9.epub
-src/img/Better_Than_the_Movies_by_Lynn_Painter_z-lib_org.epub
 package.json
-src/estrellas.css
-src/components/product/Product.jsx
-src/components/product/Product.jsx
-src/components/product/Product.jsx
-src/components/contact/contact.css
-src/App.jsx
+new-portfolio/
+src/img/hand.svg
+src/img/hand.png
